Update to version 1.1.0 with LAB color support and enhanced documentation
- Bumped version to 1.1.0 in package.json.
- Expanded description to include LAB color support alongside CMYK and spot colors.
- Added LAB color space support in PDF generation, including methods for defining and using LAB spot colors.
- Updated README.md to reflect new features, including LAB color handling and usage examples.
- Removed outdated test files to streamline the project.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pdf-svg",
-  "version": "1.0.0",
-  "description": "Minimal PDF generator with SVG rendering, CMYK and spot color support",
+  "version": "1.1.0",
+  "description": "Minimal PDF generator with SVG rendering, CMYK, LAB, and spot color support",
   "main": "lib/index.js",
   "module": "lib/index.js",
   "browser": "lib/pdf-svg.browser.js",
@@ -25,11 +25,14 @@
     "pdf",
     "svg",
     "cmyk",
+    "lab",
     "spot-color",
     "pantone",
+    "color-space",
     "vector",
     "graphics",
-    "print"
+    "print",
+    "professional"
   ],
   "author": "",
   "license": "MIT",
